    * 0018 New option for displaying a legend for the colors used in the timeline...

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...


1.2.3i7:
    Core & Setup:
    * 0011 Introduce optional lower limit for predicted levels...
    * 0217 FIX: More verbose error output for SNMP errors on the command line...
    * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...
    * 0010 FIX: Fix computation of hour-of-the-day and day-of-month prediction...
    * 0292 FIX: Inline SNMP: Check_MK check helpers are closing UDP sockets now...

    Checks & Agents:
    * 0060 cisco_fantray: new check for monitoring fan trays of Cisco Nexus switches
    * 0061 cisco_cpu: check now recognizes new object cpmCPUTotal5minRev...
    * 0063 veeam_client: new check to monitor status of veeam clients with special agent plugin...
    * 0064 veeam_jobs: new check to monitor the backup jobs of the veeam backup tool...
    * 0047 fritz.conn fritz.config fritz.uptime fritz.wan_if fritz.link: New checks for monitoring Fritz!Box devices...
    * 0027 esx_vsphere_sensors: it is now possible override the state of sensors...
    * 0090 apc_ats_status: New Check for monitoring APC Automatic Transfer Switches
    * 0080 Added new checks for Brocade NetIron MLX switching / routing devices...
    * 0091 apc_ats_output: new check for output measurements on APC ATS devices
    * 0068 check_sql: support for mssql databases included
    * 0208 fileinfo.groups: Added minimum/maximum file size parameters...
    * 0093 check_http: Default service description prefix can be avoided...
    * 0004 df: dynamic filesystem levels now reorder levels automatically...