@@ -1,0 +1,10 @@
+Title: Parse state of downtime notification log entries correctly
+Level: 1
+Component: livestatus
+Version: 1.2.4b1
+Date: 1387193798
+Class: fix
+
+The state information of log messages of notifications that are
+triggered by downtimes was not correctly parsed. This has been
+fixed.
